// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Size 1`] = `
Array [
  <div
    className=""
  >
    <table>
      <tbody>
        <tr>
          <td>
            <p>
              Small
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx ap by"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
                >
                  July 26
                </h1>
                <div
                  className="cc cd ax ce cf cg"
                />
              </div>
            </div>
          </td>
          <td>
            <p>
              Medium
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx ap ch"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax ci cf bo c5 at au av c6 c7 c8 c9 ca cb"
                >
                  July 26
                </h1>
                <div
                  className="cc cd ax ce cf cg"
                />
              </div>
            </div>
          </td>
          <td>
            <p>
              Large
            </p>
            <div
              className="bt bu bv bw b3 b1 b4 b2 bx ap cj"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b3 b1 bz c0"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="c1 c2 c3 c4"
              >
                <h1
                  className="ax bn az bo c5 at au av c6 c7 c8 c9 ca cb"
                >
                  July 26
                </h1>
                <div
                  className="cc cd ax ce cf cg"
                />
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ck cl cm cn"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="co cp cq ck cr cs ct cu cv cw cx"
      >
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
        <li
          className="cy cz"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 bz c0"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c1 c2 c3 c4"
            >
              <h1
                className="ax ay az b0 c5 at au av c6 c7 c8 c9 ca cb"
              >
                July 26
              </h1>
              <div
                className="cc cd ax ce cf cg"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="d0 d1 d2 ap d3 d4 d5 d6 ci d7 d8 d9 da db"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="d0 d1 d2 ap d3 d4 d5 d6 ci d7 d8 d9 da dc"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ax ce cf cg b9 cs ck"
      data-baseweb="input"
    >
      <div
        className="cz cs ck dd bu de an ao b3 b4 b1 b2 ax ce cf cg b9 df bj"
        data-baseweb="base-input"
      >
        <div
          className="cs af b7"
        >
          <svg
            className="dg dh di dj dk"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cz ba ah ai ak ck c0 dl dm b5 b6 dn do ax ce cf cg b9 dp dq"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ay cf b0 b9 cs ck"
      data-baseweb="input"
    >
      <div
        className="cz cs ck dd bu de an ao b3 b4 b1 b2 ax ay cf b0 b9 df bj"
        data-baseweb="base-input"
      >
        <div
          className="cs af b7"
        >
          <svg
            className="dg dh di dj dk"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cz ba ah ai ak ck c0 dl dm dr ds dt du ax ay cf b0 b9 dp dq"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ci cf bo b9 cs ck"
      data-baseweb="input"
    >
      <div
        className="cz cs ck dd bu de an ao b3 b4 b1 b2 ax ci cf bo b9 df bj"
        data-baseweb="base-input"
      >
        <div
          className="cs af b7"
        >
          <svg
            className="dg dh di dj dk"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="cz ba ah ai ak ck c0 dl dm bp bq dv dw ax ci cf bo b9 dp dq"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
